removed clause 0 (submission specific material)

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -712,6 +712,8 @@ All OMG specifications are subject to continuous review and improvement. As part
 % \newpage
 
 \cleardoublepage
+
+
 \renewcommand{\contentsname}{Table of Contents}
 \tableofcontents
 
@@ -866,409 +868,12 @@ The reader is encouraged to report any technical or editing issues/problems
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\newpage
-
-\setcounter{clause}{-1}
-\clause{Submission-Specific Material}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\sclause{Submission Preface}
-Fraunhofer FOKUS, MITRE, and Thematix Partners LLC are pleased  to submit this joint proposal in response to the Ontology, Modeling and Specification Integration and Interoperability (OntoIOp) RFP  (OMG document ad/2013-12-02). The joint proposal is supported by Athan Services  and the Otto-von-Guericke University Magdeburg. The contacts for this submission are:
-\begin{itemize}
-	\item Fraunhofer FOKUS, Andreas Hoffmann, andreas.hoffmann@fokus.fraunhofer.de
-	\item MITRE, Leo Obrst, lobrst@mitre.org
-	\item Thematix Partners LLC, Elisa Kendall, ekendall@thematix.com	
-	\item Athan Services, Tara Athan, taraathan@gmail.com
-	\item Otto-von-Guericke University Magdeburg, Till Mossakowski, till@iws.cs.uni-magdeburg.de  (\textit{lead contact})
-\end{itemize}
+%\setcounter{clause}{-1}
+\cleardoublepage
 
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\sclause{Mandatory Requirements}
-
-
-\begin{center}
-\begin{longtable}{|p{0.09\textwidth}|p{0.42\textwidth}|p{0.42\textwidth}|}
-%\caption{Mandatory Requirements}\\
-\hline
-\textbf{ID} & \textbf{RFP requirement} & \textbf{How this proposal  addresses requirement}\\
-\hline
-\endfirsthead
-\multicolumn{3}{l}%
-{\tablename\ \thetable\ -- \textit{Continued from previous page}} \\
-\hline
-\textbf{ID} & \textbf{RFP requirement} & \textbf{How this proposal addresses requirement}\\
-\hline
-\endhead
-\hline \multicolumn{3}{l}{\textit{Continued on next page}} \\
-\endfoot
-\hline
-\endlastfoot
-
-6.5.1(a) & 
-Proposals shall provide a specification of a metalanguage for relationships between the components
-of logically heterogeneous OMS, particularly, given a language translation from a language L1 to
-another language L2, the application of the language translation to an OMS that is written in the
-language L1. &
-\DOL provides the required translation construct using syntax \syntax{O with translation t}, see \ref{c:OMS} and \ref{a:dol-text:OMS}.
-Moreover, \DOL provides heterogeneous interpretations between OMS, see \ref{c:oms-mappings} and \ref{a:dol-text:mappings}. 
-   \\ \hline
-%
-6.5.1(b) & 
-Proposals shall provide a specification of a metalanguage for the union of OMS written in
-different languages, which implicitly involves the application of suitable default translations in
-order to reach a common target language. &
-The syntax for unions is \syntax{O1 and O2}, see \ref{c:OMS} and \ref{a:dol-text:OMS}. Default translations are discussed in
-\ref{c:OMS}, and \DOL's notion of heterogeneous logical
-environment explicitly specifies default translations, see \ref{c:direct-sematics}.
-	\\ \hline
-%
-6.5.1(c) & 
-Proposals shall provide a specification of a metalanguage for importation in modular OMS.	&
-\DOL allows the import of OMS by their IRI, see \ref{c:OMS} and \ref{a:dol-text:OMS}.
-	\\  \hline
-%
-6.5.1(d) & 
-Proposals shall provide a specification of a metalanguage for relationships between OMS and their
-extracted modules e.g. the whole theory is a conservative extension of the module. 	&
-\DOL provides such a construct with syntax \syntax{module m : o1 of o2 for sig}, see \ref{c:oms-mappings} and \ref{a:dol-text:mappings}.
-	\\ \hline
-%
-6.5.1(e) & 
-Proposals shall provide a specification of a metalanguage for relationships between OMS and their
-approximation in less expressive languages such that the approximation is logically implied by the
-original theory, where the approximation generally has to be maximal in some suitable sense. 	&
-\DOL provides such a construct with syntax \syntax{o keep logic},  see \ref{c:OMS} and \ref{a:dol-text:OMS}.	\\ \hline
-%
-6.5.1(f) & 
-Proposals shall provide a specification of a metalanguage for links such as imports,
-interpretations, refinements, and alignments between OMS/modules.
-	&
-\DOL covers several metalogical relationships, namely entailments, interpretations, equivalences, refinements, alignments and module relations, see \ref{c:oms-mappings} and \ref{a:dol-text:mappings}.
-	\\ \hline
-%
-6.5.1(g) & 
-Proposals shall provide a specification of a metalanguage for combination of OMS along links. 	&
-\DOL provides such a construct with syntax \syntax{combine n}, where \syntax{n} is a network of OMS and mappings (links),  see \ref{c:OMS} and \ref{a:dol-text:OMS}.
-	\\ \hline
-%
-6.5.2(a)& 
-The constructs of the metalanguage shall be applicable to different logics.	&
-The semantics of \DOL is based on a heterogeneous logical
-environment, which can contain arbitrary logics, see \ref{c:direct-sematics}.
-   \\ \hline
-%
-6.5.2(b)& 
-The metalanguage shall neither be restricted to OMS in a specific domain, nor to OMS represented
-in a specific logical language.	&
-The semantics of \DOL is based on a heterogeneous logical
-environment, which can contain arbitrary logics, see \ref{c:direct-sematics}.
-   \\ \hline
-%
-6.5.2(c)& 
-The metalanguage shall not replace the object language constructs of the conforming logical
-languages.	&
-The syntax of a \syntax{NativeDocument} is left unspecified in this standard. Rather, here this standard relies on other
-standards and language definitions.
-See \ref{c:OMS} and \ref{a:dol-text:OMS}.
-   \\ \hline
-%
-6.5.2(d)& 
-The metalanguage shall provide syntactic constructs for (i) structuring OMS regardless of the
-logic in which their sentences are formalized and (ii) basic and structured OMS and facilities to
-identify them in a globally unique way.
-	&
-The structuring constructs for OMS in \ref{c:OMS} and \ref{a:dol-text:OMS} can be used for 
-any logic, see the semantics in \ref{c:direct-sematics}. \DOL uses IRIs for referencing both basic and structured OMS, see
-\ref{c:iris}.
-   \\ \hline
-%
-6.5.3(a)& 
-An abstract syntax specified as an SMOF compliant meta model.	&
- The abstract syntax is specified using SMOF, see clause \ref{c:abstract-syntax}. An EBNF variant is given in annex \ref{a:EBNF}. 
-   \\ \hline
-%
-6.5.3(b)& 
-A human-readable lexical concrete syntax in EBNF and serialization in XML, for the latter XMI shall
-be used.	&
-The concrete syntax (in EBNF) is specified in clause \ref{c:abstract-syntax}. The XMI representation 
-is automatically derived from the SMOF meta model.
-   \\ \hline
-%
-6.5.3(c)& 
-Complete round-trip mappings from the human-readable concrete syntax to the abstract syntax and
-vice versa.	&
- The metaclasses of the MOF abstract syntax are used as non-terminals
-of the EBNF concrete syntax (clause 
-\ref{c:abstract-syntax}); this makes a round-trip mapping between both straight-forward. Moreover, the 
-round-trip mapping has been implemented in form of a parser and a printer as part of the 
-heterogeneous tool set  (see appendix~\ref{a:tools} and  \url{http://hets.eu}).
-   \\ \hline
-%
-6.5.3(d)& 
-A formal semantics for the abstract syntax.	&
-The formal semantics is given in clause \ref{c:semantics}.
-   \\ \hline
-%
-%
-6.5.4(a)& 
-Existing OMS in existing serializations shall validate as OMS in the metalanguage with a minimum
-amount of syntactic adaptation.	& 
-Any document providing an OMS in a serialization of a \DOL conforming
-language can be used as-is in \DOL, by reference to its IRI.
-See \ref{sec:existing-serialization}.
-   \\ \hline
-%
-6.5.4(b)& 
-It shall be possible to refer to existing files/documents from an OMS implemented in the
-metalanguage without the need for modifying these files/documents.	&
-Documents can be referenced by IRIs, see \ref{c:iris}.
-   \\ \hline
-%
-6.5.4(c)& 
-Translations between logical languages shall preserve (possibly to different degrees) the semantics
-of the logical languages. Between a given pair of logical languages, several translations are
-possible.	&
-The semantics of \DOL is based on a heterogeneous logical
-environment, which contains institution comorphisms as translations, see \ref{c:direct-sematics}. 
-Institution comorphisms preserve semantics
-in a weak form through their satisfaction condition. The \DOL Ontology specifies properties of 
-translations (comorphisms) preserving more and more of the semantics, see annex 
-\ref{a:dol-onto}.
-   \\ \hline
-%
-6.5.5(a)& 
-Informative annexes shall establish the conformance of a number of relevant logical languages. An
-initial set of language translations may be part of an informative annex.	&
-For conformance of logical languages, see 6.5.5(b) below.
-Conformance of some translations is established in annex \ref{a:graph}.
-   \\ \hline
-%
-6.5.5(b)& 
-Conformance of the following subset of logical languages  shall be established: OWL2 (with profiles
-EL, RL, QL), CLIF, RDF, UML class diagrams.
-	&
- Conformance of the following languages is established: OWL 2 (annex \ref{a:owl}), CLIF (annex \ref{a:cl}), RDF and RDF Schema (annex \ref{a:rdfs}), UML class diagrams (annex \ref{a:uml-class}).
-   \\ \hline
-%
-6.5.5(c)& 
-Conformance of a suitable set of translations among the languages mentioned in the previous bullet
-point shall be established.	&
-Conformance of some translations is established in annex \ref{a:graph}.
-   \\ \hline
-%
-6.5.6 & 
-Existing standards and best practices for allocating globally unique identifiers shall be reused.
-The same standards and best practices shall also be applied to associate different representations
-of the same content to one unique identifier.	&
-\DOL uses IRIs to reference documents (both \DOL documents, as well
-as documents written in some conforming language). See \ref{c:iris}.
-   \\ \hline
-%
-
-
-\end{longtable}
-\end{center}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newpage
-\sclause{Optional Requirements}
-
-\begin{center}
-\begin{longtable}{|p{0.09\textwidth}|p{0.42\textwidth}|p{0.42\textwidth}|}
-%\caption{Optional Requirements}\\
-\hline
-\textbf{ID} & \textbf{RFP requirement} & \textbf{How this proposal  addresses requirement}\\
-\hline
-\endfirsthead
-\multicolumn{3}{l}%
-{\tablename\ \thetable\ -- \textit{Continued from previous page}} \\
-\hline
-\textbf{ID} & \textbf{RFP requirement} & \textbf{How this proposal addresses requirement}\\
-\hline
-\endhead
-\hline \multicolumn{3}{l}{\textit{Continued on next page}} \\
-\endfoot
-\hline
-\endlastfoot
-%
-6.6.1 & 
-Submissions may include additional languages  without a standardized model theory.	&
-This has been left for forthcoming versions.
-   \\ \hline
-%%
-6.6.2 & 
-Proposals may provide constructs for non-monotonic logics. 	&
-Currently, only monotonic logics are supported.
-However, \DOL provides a circumscription-like non-monotonic
-structuring construct with syntax \syntax{o1 then \%minimize o2},
-see \ref{c:OMS} and \ref{a:dol-text:OMS}.
-   \\ \hline
-%
-6.6.3 & 
-A characterization of the trade-offs among different translations. 	&
-This is left for future work.
-   \\ \hline
-%
-\end{longtable}
-\end{center}
-
-\clearpage
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\sclause{Issues to be Discussed}
-
-\begin{center}
-\begin{longtable}{|p{0.09\textwidth}|p{0.42\textwidth}|p{0.42\textwidth}|}
-%\caption{Optional Requirements}\\
-\hline
-\textbf{ID} & \textbf{Discussion item} & \textbf{Resolution}\\
-\hline
-\endfirsthead
-\multicolumn{3}{l}%
-{\tablename\ \thetable\ -- \textit{Continued from previous page}} \\
-\hline
-\textbf{ID} & \textbf{Discussion item} & \textbf{Resolution}\\
-\hline
-\endhead
-\hline \multicolumn{3}{l}{\textit{Continued on next page}} \\
-\endfoot
-\hline
-\endlastfoot
-%
-6.7.(a)	& 
-Do existing language standards need to be extended or adapted in order to make them OntoIOp 
-conforming.	&
-The goal of \DOL is to support existing languages without any
-adaptations, see also 6.5.4(a). However, in order to meet
-requirement 6.5.6, \DOL-conforming languages should support the
-use of IRIs. If they do not, there is a mechanism for assigning IRIs
-to (fragments of) language documents even if the language itself does not support
-this, see \ref{c:conform:serialization}.
-Moreover, there is a mechanism for injecting IRIs in existing language serializations, see \ref{sec:existing-serialization} and \ref{c:req:annotation}.
-   \\ \hline
-%
-6.7.(b)	& 
-Proposals should discuss whether the semantics of the metalanguage shall be included into the
-standard
-&
-The semantics of the  \DOL metalanguage is included in this specification. The reasons are discussed
-in the introduction of clause \ref{c:semantics}.
-   \\ \hline
-%	
-6.7.(c)	& 
-Proposals should discuss the chosen list of logics and translations.	&
-The chosen list of logics and translations is discussed in the
-introduction of annex \ref{a:graph}.
-   \\ \hline
-%	
-6.7.(d)	& 
-Proposals should discuss a meta-ontology of logical languages and theories.	&
-The \DOL Ontology is discussed in annex \ref{a:dol-onto}.
-   \\ \hline
-%	
-6.7.(e)	& 
-Proposals should discuss the use of QVT for expressing logic translations.	&
- This is discussed in annex \ref{sec:repr-trans}.
-   \\ \hline
-%	
-6.7.(f)	& 
-Proposals should discuss the role of APIs.	&
-The role of APIs is discussed in section \ref{c:APIs}. 
-   \\ \hline
-%	
-6.7.(g)	& 
-Proposals should discuss availability and use of tools.	&
-Tools for \DOL are discussed in annex \ref{a:tools}. 
-   \\ \hline
-%	
-6.7.(h)	& 
-Proposals should discuss a registry of logical languages.	&
-A registry is discussed in  annex \ref{a:registry}.
-   \\ \hline
-%	
-\end{longtable}
-\end{center}
-
-\clearpage
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\newpage
-\sclause{Evaluation Criteria}
-
-\begin{center}
-\begin{longtable}{|p{0.09\textwidth}|p{0.42\textwidth}|p{0.42\textwidth}|}
-%\caption{Optional Requirements}\\
-\hline
-\textbf{ID} & \textbf{Criterion} & \textbf{Comment}\\
-\hline
-\endfirsthead
-\multicolumn{3}{l}%
-{\tablename\ \thetable\ -- \textit{Continued from previous page}} \\
-\hline
-\textbf{ID} & \textbf{Criterion} & \textbf{Comment}\\
-\hline
-\endhead
-\hline \multicolumn{3}{l}{\textit{Continued on next page}} \\
-\endfoot
-\hline
-\endlastfoot
-%
-6.8(a)	& 
-Proposals covering a broader range of features and of use cases will be favored. As a minimum, proposals shall define conformance criteria for logical languages and translations, and their proposed metalanguage shall cover some metalogical relationships and shall be applicable to multiple logics.	&
-Based on the notion of institution, conformance criteria for logical languages are defined in \ref{c:conform:logic} and those for translations in \ref{c:conform:translation}. \DOL covers several metalogical relationships, namely entailments, interpretations, equivalences, refinements, alignments and module relations, see \ref{c:oms-mappings} and \ref{a:dol-text:mappings}.
-\DOL is applicable to multiple logics (see also 6.8(c) and~\ref{sem-foundations} below).
-   \\ \hline
-%
-6.8(b)		&
-Proposals covering existing language standards without (or with fewer) modifications will be favored.	&
-Any document providing an OMS in a serialization of a \DOL conforming
-language can be used as-is in \DOL, by reference to its IRI. See \ref{sec:existing-serialization}.
-	\\ \hline
-%
-6.8(c)		&
-Proposals establishing actually (or making this at least possible in theory) OntoIOp conformance of more logical languages and translations will be favored. 	&
-The conformance of OWL 2 (annex \ref{a:owl}), Common Logic (annex \ref{a:cl}), RDF and RDF Schema (annex \ref{a:rdfs}), UML class diagrams (annex \ref{a:uml-class}) and \CASL (annex \ref{a:casl})
- is established.
-	\\ \hline
-
-\end{longtable}
-\end{center}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\sclause{Proof of Concept}
-Prototypical open source tools for \DOL are already available, see
-annex \ref{a:tools}. It is expected that they will reach industrial
-strength within two or three years.
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-
-\sclause{Changes to Adopted OMG Specifications}
-This specification proposes no changes to adopted OMG specifications.
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\newpage
 \clause{Scope}
 \pagenumbering{arabic} 
 This \IS specifies the Distributed Ontology, Modeling and Specification
