- footer text added - figure captions added - subclause headers added

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -65,7 +65,7 @@
 \pagestyle{fancy}
 %\fancyhead[LO,RE]{}
 %\fancyhead[RO,LE]{}
-\fancyfoot[LO,RE]{\iffloatpage{}{(The Title)}}
+\fancyfoot[LO,RE]{\iffloatpage{}{(\scriptsize{\textsf{Distributed Ontology, Model, and Specification Language (DOL), v1.0 Beta})}}}
 \fancyfoot[RO,LE]{\iffloatpage{}{\thepage}}
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
