most of linda's edits taken care of

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -71,8 +71,8 @@
 \renewcommand{\footrulewidth}{0pt}
 %\renewcommand{\headrulewidth}{\iffloatpage{0pt}{0.4pt}}
 
-\newcommand{\DOLfooter}[0]{}
-\newcommand{\onlypagenumberfooter}[0]{}
+
+
 
 
 %%\usepackage[show]{ed}
@@ -4485,20 +4485,20 @@ model (see Appendix~\ref{ex:definedconcepts} for an example); this may be intere
 models.
 
 
-\newpage
+
 \begin{figure}
   \centering
 
     \includegraphics[scale=0.43]{mof/oms.png}
   \caption{DOL metamodel: OMS}
   \label{fig:oms}
+  	
 \end{figure}
-	\onlypagenumberfooter
-\newpage
+
+
 
 
 The DOL metamodel for extension OMS is shown in Fig.~\ref{fig:extension&closure}.
-\DOLfooter
 \syntax{ExtendingOMS} is a subclass of \syntax{OMS}, containing
 those OMS that may be used to extend a given OMS within an \syntax{ExtensionOMS}.
 An \syntax{ExtendingOMS} can be one of the following:
@@ -8760,7 +8760,7 @@ $name_2 = 'relativized'++aName'$.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\newpage
+
 
 % \clearpage
 % \vspace*{\fill}
@@ -8774,7 +8774,7 @@ $name_2 = 'relativized'++aName'$.
 % \addcontentsline{toc}{clause}{Annex}
 
 
-
+\cleardoublepage
 \normannex{\DOL Registry}
 \label{a:registry}
 
@@ -8794,11 +8794,11 @@ OMG maintains the registry as an informative resource governed by the standard. 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-
+\cleardoublepage
 %\chapter[LoLa RDF Vocabulary]{Annex (normative): LoLa, an RDF vocabulary that implements the \DOL terminology}
 \infannex{\DOL Ontology}
 \label{a:dol-onto}
-
+\sclause{General}
 
 This annex describes the DOL ontology, which implements the terms and definitions from
 clause~\ref{terms-and-defs}. While the ontology itself is informative, it is required for the 
@@ -8810,9 +8810,11 @@ The namespaces and prefixes corresponding to external elements required for use 
 are provided below.  Table \ref{tab:namespace} lists the prefixes and namespaces on which DOL depends.
  
  
- \begin{table}[htbp]
+% \begin{table}[htbp]
  \begin{center}
+	  
  \begin{longtable}{|p{0.1\textwidth}|p{0.8\textwidth}|}
+\caption{Prefix and Namespaces for referenced/external vocabularies}  \label{tab:namespace}\\ 
  %\caption{Optional Requirements}\\
  \hline
   \textbf{Prefix} & \textbf{Namespace}\\
@@ -8838,10 +8840,8 @@ skos & \url{http://www.w3.org/2004/02/skos/core#} \\
 sm	& \url{http://www.omg.org/techprocess/ab/SpecificationMetadata/} \\   \hline
  %	
  \end{longtable}
- \caption{Prefix and Namespaces for referenced/external vocabularies}
- \label{tab:namespace}
  \end{center}
- \end{table}
+% \end{table}
 
 The namespace approach taken for DOL is based on OMG guidelines and is constructed as follows:
 \begin{itemize}
@@ -8855,9 +8855,10 @@ The namespace approach taken for DOL is based on OMG guidelines and is construct
  required in any extension, including API4KP.
 
  
- \begin{table}[htbp]
+ %\begin{table}[htbp]
  \begin{center}
  \begin{longtable}{|p{0.1\textwidth}|p{0.8\textwidth}|}
+ \caption{Prefix and Namespaces for the DOL ontology}  \label{tab:dolnamespace}\\
  %\caption{Optional Requirements}\\
  \hline
   \textbf{Prefix} & \textbf{Namespace}\\
@@ -8876,10 +8877,8 @@ The namespace approach taken for DOL is based on OMG guidelines and is construct
 dol & \url{http://www.omg.org/spec/DOL/DOL-terms/}\\    \hline
  %	
  \end{longtable}
- \caption{Prefix and Namespaces for the DOL ontology}
- \label{tab:dolnamespace}
  \end{center}
- \end{table}
+% \end{table}
 
  
  
@@ -9060,9 +9059,9 @@ widespread than anticipated and thus such documentation is warranted.
 % %will not be normative; however, it is
 % %expected to become the basis for normative activities.
 
-
+\cleardoublepage
 \infannex{Conformance of OWL 2 DL With \DOL}\label{a:owl}
-
+\sclause{General}
 \CLnote{Is it correct that ``With'' and ``of'' use different capitalizations?}%
 \CLnote{Why refer to this external paper when \SROIQ is actually formalized as an institution below?  Maybe cut this sentence and replace it by a general introduction?  Or at least rephrase ``is established'' into ``has originally been established''.}%
 The semantic conformance of OWL 2 DL (as specified in \nref{OWL2}) with \DOL
@@ -9154,9 +9153,9 @@ OMG maintains the registry as an informative resource governed by the standard. 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
+\cleardoublepage
 \infannex{Conformance of OWL 2 DL With \DOL}\label{a:owl}
-
+\sclause{General}
 \CLnote{Is it correct that ``With'' and ``of'' use different capitalizations?}%
 \CLnote{Why refer to this external paper when \SROIQ is actually formalized as an institution below?  Maybe cut this sentence and replace it by a general introduction?  Or at least rephrase ``is established'' into ``has originally been established''.}%
 The semantic conformance of OWL 2 DL (as specified in \nisref{W3C/TR REC-owl2-syntax:2012}) with \DOL
@@ -9587,7 +9586,7 @@ We distinguish three cases.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\cleardoublepage
 \infannex{Conformance of Common Logic with \DOL}\label{a:cl}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -9681,7 +9680,7 @@ in order to obtain a theory in the \CL institution.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\cleardoublepage
 \infannex{Conformance of RDF and RDF Schema with \DOL}\label{a:rdfs}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -9770,10 +9769,10 @@ such as \texttt{owl:Thing} and \texttt{owl:oneOf}, tailored towards the represen
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\cleardoublepage
 \infannex{Conformance of UML class and object models with \DOL}\label{a:uml-class}
 
-\noindent%
+\sclause{General}
 This informative annex demonstrates conformance of a subset of UML
 class and object models with \DOL by defining an institution for
 both.  The subset is restricted to the static aspects of class
@@ -10794,9 +10793,10 @@ equal.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+\cleardoublepage
 \infannex{Conformance of TPTP with \DOL}\label{a:TPTP}
 
+\sclause{General}
 TPTP \cite{TPTP,DBLP:conf/cade/SutcliffeSY94,DBLP:journals/jar/Sutcliffe09}
 is a language spoken by dozens of first-order theorem provers,
 and large libraries have been formalized in TPTP.
@@ -10827,9 +10827,10 @@ sorts $\{s\}$ is isomorphic to unsorted first-order logic).
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\cleardoublepage
 \infannex{Conformance of CASL with \DOL}\label{a:casl}
 
-
+\sclause{General}
 \CASL \cite{CASL-RM} extends many-sorted first-order logic with
 partial functions and subsorting.  It also provides induction
 sentences, expressing the (free) generation of datatypes. 
@@ -10903,8 +10904,9 @@ of the sorts in $S'$ are generated by function symbols in $F'$.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\cleardoublepage
 \infannex{A Core Logic Graph}\label{a:graph}
-
+\sclause{General}
 \ednote{Instantiate the whole heterogeneous environment, that is, error
 logic, unions, etc.}
 
@@ -11387,6 +11389,7 @@ in this direction.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\cleardoublepage
 \infannex{Extended Logic Graph}\label{a:ext-graph}
 
 \begin{figure}
@@ -11427,9 +11430,10 @@ The actual translations are specified in \cite{OntoGraph}.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\cleardoublepage
 \infannex{\DOL Abstract Syntax in EBNF}
 \label{a:EBNF}
-
+\sclause{General}
 
 The following subclauses specify the abstract syntax of \DOL in EBNF. Note that it deviates from the EBNF specification in
  \nref{EBNF} in favor of a more concise
@@ -11746,8 +11750,9 @@ CURIE  ::= String
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\cleardoublepage
 \infannex{Extension of \DOL with Queries}\label{a:queries}
-
+\sclause{General}
 This annex describes the syntax of queries. A semantics still needs to
 be developed.  \DOL's metaclass \syntax{LibraryItem} is extended with a
 new subclass \syntax{QueryRelatedDefinition} for definitions related to
@@ -11920,8 +11925,9 @@ elided, and left for a later version of \DOL.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\cleardoublepage
 \infannex{Example Uses of all \DOL Constructs}\label{a:uses}
-
+\sclause{General}
 This annex provides example uses of \DOL constructs.  Jointly with
 \cref{c:goal}, which  contains \DOL examples for the
 usage scenarios, all \DOL constructs (although not necessarily all
@@ -12921,6 +12927,7 @@ result MyResult = MySubst for MyQuery
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\cleardoublepage
 \infannex{Tools for \DOL}\label{a:tools}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -12952,6 +12959,7 @@ available at the following URL \url{https://github.com/spechub/hets}.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \sclause{Ontohub, Modelhub, Spechub}\label{a:ontohub}
+
 
 Ontohub/Modelhub/Spechub is  another implementation  of
 \DOL. It is a repository engine for managing OMS, OMS networks and OMS
@@ -13049,9 +13057,10 @@ effort API4KP.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\cleardoublepage
 \infannex{Ontohub loc/id v2}\label{a:loc/id}
 
-
+\sclause{General}
 
 \lstset{ %
   basicstyle=\small\ttfamily,
@@ -13312,6 +13321,7 @@ be ambiguous in a normal request.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\cleardoublepage
 \infannex{Introduction to Category Theory}\label{a:categories}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -13581,6 +13591,7 @@ i.e. for each set $A$, $\iota : \mathcal{P}_{\mathit{fin}}(A)\to\mathcal{P}(A)$ 
 function (each finite subset of a set is also a subset of the set).
 \end{example}
 
+\cleardoublepage
 %\infannex{Bibliography}
 
 
@@ -13588,10 +13599,6 @@ function (each finite subset of a set is also a subset of the set).
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\newpage
-
-\clearpage
 
 % \bibliographystyle{plain} 
 % \renewcommand{\bibname}{References}
